--- a/reader/index.html
+++ b/reader/index.html
@@ -18,10 +18,21 @@
 
         <script>
             "use strict";
+            
+            function getQueryVariable(variable) {
+               var query = window.location.search.substring(1);
+               var vars = query.split("&");
+               for (var i=0;i<vars.length;i++) {
+                       var pair = vars[i].split("=");
+                       if(pair[0] == variable){return pair[1];}
+               }
+               return(false);
+            }
 
             document.onreadystatechange = function () {
               if (document.readyState == "complete") {
-                window.reader = ePubReader("https://s3.amazonaws.com/moby-dick/", {
+                var book = getQueryVariable('book');
+                window.reader = ePubReader(book, {
                    restore: true
                  });
               }
